# zkpi

./: .gitignore  .gitmodules  Cargo.toml  TODO  TODOs  driver.py  eval_all.py  mathlib.csv  mathlib_downsized.csv  mathlib_names.csv  mathlib_names_sampled.csv  perf.data  run_test.py  stdlib.csv  stdlib.lean3  stdlib_downsampled.csv  stdlib_names.csv  stdlib_names_sampled.csv  stdlib_sizes.csv  test_theorems  theorems  theorems_sample
Lean4Examples/: Lean4Examples.lean  Main.lean  lake-manifest.json  lakefile.lean
circ/: Cargo.toml  rust-toolchain.toml
data/: compile_times.csv  mathlib_benchmarks  mathlib_times.csv  mathlib_times_lean4.csv  proof_sizes.csv  proof_sizes_stdlib.csv  r1cs.csv  stdlib_benchmarks  stdlib_times_lean4.csv
lean-examples/: and_comm.lean  dedup_list.lean  degree_is_even.lean  demorgan.lean  insertion_sort.lean  lake-manifest.json  lakefile.lean  pigeonhole.lean
scripts/: commander.py  create_vms.zsh  data_script.py  delete_vms.zsh  main.zsh  mathlib_downsized_FULL.csv  mathlib_times_downsampled.csv  mathlib_times_downsampled_appostroph.csv  mathlib_times_lean4.csv  mathlib_times_lean4_nat3.csv  mathlib_times_lean4_nat4.csv  mathlib_times_new.csv  mathlib_times_new_rerunquot.csv  oneshot.sh  output  param_sweep.csv  param_sweep.py  r1cs_param_sweep.csv  run_compile.py  runner.py  stdlib_downsized_FULL.csv  stdlib_times.csv  stdlib_times.csv.even_newer  stdlib_times.csv.new  stdlib_times_downsampled.csv  stdlib_times_downsampled_appostroph.csv  stdlib_times_downsampled_new.csv  stdlib_times_lean4_nat2.csv  stdlib_times_new.csv  (+2 more)
src/: lean.rs  (+5 more)
(+53 files in other folders)
