[package]
name = "crabpi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashconsing = "1.5.1"
log = "0.4.17"
simple_logger = "2.2.0"
env_logger = "0.9.0"
nom = "7.1.1"
nom-unicode = "0.3.0"
rand = "0.8.5"

