[package]
name = "crabpi"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashconsing = "1.5.1"
log = "0.4.17"
simple_logger = "2.2.0"
env_logger = "0.9.0"
nom = "7.1.1"
nom-unicode = "0.3.0"
rand = "0.8.5"
lru = "0.8.1"
fxhash = "0.2.1"
rlimit = "0.8.3"
serde = "1.0.147"
structopt = "0.3"
rug = "1.24"
once_cell = "1.19.0"
